# voting-analysis-tools

./: .gitignore  Documentation  LICENSE  README.md  election.py  pyproject.toml  rcv.py  rcv_m.py  rcvsim.m  requirements.txt
.archive/: LICENSE  README.md
EIL summer 2023/: Mahshad_dim.py  diff_analysis.ipynb  election_table.csv  integration.ipynb  interval_consistency.ipynb  interval_consistency.py  null_elections.ipynb  null_elections.py  rcv_dimensionality.py  rcv_dist_weighted.py  rcv_distribution.py  simulator.ipynb  table_candidates.txt  table_level.txt  table_type_without_candidates.txt  testing_consistency.ipynb  voter spectrum tutorial.ipynb
cleaned files/: MDS_analysis.py  ballot_lengths.ipynb  bimodality_analysis.ipynb  candidate_distribution.ipynb  consistency.py  inconsistent_ballots_analysis.ipynb  integration.ipynb  median_voter_anakysis.ipynb  median_voter_analysis.ipynb  null_elections.ipynb  null_elections.py  permissive.csv  phousawanh_simulation_tests.ipynb  playground.ipynb  rcv_distribution.py  saving_KDE.ipynb  simulations.ipynb  strict.csv  test_file.py  voting_rules.py
data/: README.md
docs/: citations.bib
mds_exploration/: Maine_11062018_CongressionalDistrict2_coded.csv  NYCspace.mat  NYCspace_2.mat  generate_rcv_simulated.m  nyc_mayoral_data_2021.mat  rank_analysis.ipynb  rcv_dimensionality.ipynb  rcv_dimensionality.m  rcv_dimensionality.py  translation.ipynb
rcv_elections_database/: MatchedElections.csv  ProportionalRCV.csv  SequentialRCV.csv  SingleWinnerRCV.csv
rcv_exploration/: census-api.ipynb  election_consistency_points.pkl  (+19 more)
(+1115 files in other folders)
